Fix friends align and color

--- a/src/main/webapp/WEB-INF/css/common.css
+++ b/src/main/webapp/WEB-INF/css/common.css
@@ -11,7 +11,7 @@ nav {
 	padding: 5px;
 }
 
-#logo, #logo:link, #logo:visited, #logo:hover, #logo:active {
+#logo {
 	color: black;
 	text-decoration: none;
 	font-size: 175%;
